tdf#165658 Data Provider: Catch exception when importing CSV

Currently, the DataProvider parses the CSV in a separate thread. If an exception happens, LO crashes or freezes.

With this patch, whenever a CSV parsing error happens, it gets caught and an error message is shown.

Change-Id: Ia7e8facfe37f22d03647d94fcdf94ae0ecae10c1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182791
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins